--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,12 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LessonActivity"
-            android:exported="true"/>
-        <activity android:name=".QuizActivity" />
+        <activity android:name=".LessonActivity" />
+        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".IntroActivity" />
     </application>
 
 </manifest>
