--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".LessonActivity"/>
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".IntroActivity" />
+        <activity android:name=".QuizActivity" />
     </application>
 
 </manifest>
