--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrattleBattle">
+        <activity android:name=".Test"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LessonActivity"/>
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".LessonActivity" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:exported="true" />
         <activity android:name=".IntroActivity" />
         <activity android:name=".QuizActivity" />
     </application>
