--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrattleBattle">
-        <activity android:name=".All_Lessons"></activity>
+        <activity android:name=".LessonsMenuActivity" />
         <activity android:name=".PracticeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
