--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrattleBattle">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/frame_image_view" />
+
         <activity android:name=".LessonsMenuActivity" />
         <activity android:name=".PracticeActivity" />
         <activity android:name=".MainActivity">
@@ -19,10 +23,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".LessonActivity" />
-        <activity android:name=".RegistrationActivity"/>
+        <activity android:name=".RegistrationActivity" />
         <activity android:name=".IntroActivity" />
-        <activity android:name=".QuizActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".QuizActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
